.k8s/local/carres-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carres-api-deployment
  labels:
    app: carres-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carres-api
  template:
    metadata:
      labels:
        app: carres-api
    spec:
      containers:
        - name: carres-api
          image: nikitades/carres-api:latest
          ports:
            - containerPort: 8080
