.k8s/local/carres-keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carres-keycloak-deployment
  labels:
    app: carres-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carres-keycloak
  template:
    metadata:
      labels:
        app: carres-keycloak
    spec:
      containers:
        - name: carres-keycloak
          image: nikitades/carres-keycloak:latest
          args:
            [
              "start",
              "--optimized",
              "--http-enabled=true",
              "--hostname-strict-https=false",
              "--hostname-strict=false",
              "--proxy=passthrough"
            ]
          ports:
            - containerPort: 8080
      volumes:
        - name: keycloak-dump
          hostPath:
            path: /minikube-host/ars/Code/Personal/java/cars-reservation/apps/keycloak/realm.json
            type: File
