.k8s/local/carres-rmq-metrics-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carres-rmq-metrics-proxy-deployment
  labels:
    app: carres-rmq-metrics-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carres-rmq-metrics-proxy
  template:
    metadata:
      labels:
        app: carres-rmq-metrics-proxy
    spec:
      containers:
        - name: carres-rmq-metrics-proxy
          image: nikitades/carres-rmq-metrics-proxy:latest
          ports:
            - containerPort: 8080
