.k8s/local/carres-website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carres-website-deployment
  labels:
    app: carres-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carres-website
  template:
    metadata:
      labels:
        app: carres-website
    spec:
      containers:
        - name: carres-website
          image: nikitades/carres-website:latest
          ports:
            - containerPort: 3000
