.k8s/local/carres-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carres-api
spec:
  selector:
    app: carres-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
