.k8s/local/carres-keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carres-keycloak
spec:
  selector:
    app: carres-keycloak
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
