.k8s/local/carres-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carres-website
spec:
  selector:
    app: carres-website
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30002
