.k8s/local/carres-rmq-metrics-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carres-rmq-metrics-proxy
spec:
  rules:
    - host: rmq-metrics.carres.local
      http:
        paths:
          - path: /metrics
            pathType: ImplementationSpecific
            backend:
              service:
                name: carres-rmq-metrics-proxy
                port:
                  name: http-head
